Fix matches player screen on small screen

--- a/www/css/live.less
+++ b/www/css/live.less
@@ -694,18 +694,18 @@
         }
 
         #upcoming-matches-table.team-table span.player {
-            max-width: 120px;
+            max-width: 145px;
         }
 
         #current-matches-table.team-table span.player {
-            max-width: 105px;
+            max-width: 70px;
         }
 
         #finished-matches-table.team-table span.player {
             max-width: 100px;
         }
 
-        #search .team-table span.player {
+        #search-matches-table.team-table span.player {
             max-width: 100px;
         }
 
